# pupalink

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
pupalink/: __init__.py  downloader.py  metadata.py
