[tool.poetry]
name = "pupalink"
version = "0.1.0-alpha.4"
description = "Springer Link Download Module for Python"
readme = "README.md"
authors = ["Jimmy Nelle <jimmy.nelle@hsw-stud.de>", "Aykut Yilmaz <aykuxt@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pupagang/pupalink"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
